--- a/SmtpTester/App.config
+++ b/SmtpTester/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <system.net>
     <mailSettings>
-      <smtp from="none@domain.invalid">
-        <network host="smtp.gmail.com" port="587" enableSsl="true" />
+      <smtp from="noreply@carlisleit.com">
+        <network host="SMTP.tensolite.com" port="25" defaultCredentials="true" />
       </smtp>
     </mailSettings>
   </system.net>
